
 ** The fminbnd function has changed defaults for Matlab compatibility.
    This *may* result in existing code producing different results.

          Option     |  New Default   |  Old Default
      ------------------------------------------------
        MaxFunEvals  |      500       |     Inf
        MaxIter      |      500       |     Inf
        TolX         |     1e-4       |     1e-8

 ** Figure graphic objects have a new property "Number" which is
    read-only and will return the handle (number) of the figure.
    However, if the property "IntegerHandle" has been set to "off" then
    the property will return an empty matrix ([]).

 ** Patch and surface graphic objects now use the "FaceNormals" property
    for flat lighting.

 ** "FaceNormals" and "VertexNormals" for patch and surface graphic
    objects are now calculated only when necessary to improve graphics
    performance.  In order for any normals to be calculated the
    "FaceLighting" property must be set to "flat" (FaceNormals) or
    "gouraud" (VertexNormals), AND a light object must be present in the
    axes.

 ** Printing to raster formats (bitmaps like PNG or JPEG) now uses an
    OpenGL-based method by default.  The print options "-opengl"
    (raster) and "-painters" (vector) have been added ("qt" toolkit
    only).  The figure property "renderer" specifies which renderer to
    use.  When the property "renderermode" is "auto" Octave will select
    -opengl for a raster output format and -painters for a vector output
    format.

 ** A new print option "-RGBImage" has been added which captures the
    pixels of a figure as an image.  This is similar to screen capture
    tools, except that print formatting options can be used to, for
    example, change the resolution or display the image in black and
    white.

 ** Two new print options for page-based formats (PDF, PostScript) have
    been added.  The "-fillpage" option will stretch the plot to occupy